# compiler

./: .gitignore  AST.cpp  CMakeLists.txt  ErrorHandle.cpp  ErrorHandler.cpp  IRcode.cpp  Lexer.cpp  Mips.cpp  Opt.cpp  Parser.cpp  SymbolTable.cpp  lexer.cpp  main.cpp  output1.txt  output6.txt  readme.md  testfile1.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt
A/: testfile12.txt
B/: testfile19.txt
C/: testfile7.txt
ErrorTest/: output1.txt  output2.txt  output3.txt  output4.txt  testfile1.txt  testfile2.txt  testfile3.txt  testfile4.txt
include/: AST.h  ErrorHandle.h  ErrorHandler.h  IRcode.h  Lexer.h  Mips.h  OldSymbolTable.h  Opt.h  Parser.h  SymbolTable.h  TYPE.h  lexer.h  main.h  type.h
